Mesch.Jyro.Runtime/Parser/Parser_Statements.cs
using Microsoft.Extensions.Logging;

namespace Mesch.Jyro;

public sealed partial class Parser
{
    /// <summary>
    /// Parses a statement according to the formal Jyro grammar specification.
    /// This method serves as the primary dispatch point for all statement types
    /// and ensures proper categorization based on leading tokens.
    /// </summary>
    /// <param name="tokenStream">The token stream to parse from.</param>
    /// <returns>A parse result containing either the successfully parsed statement or error information.</returns>
    private ParseResult<IJyroStatement> ParseStatement(TokenStream tokenStream)
    {
        if (tokenStream.IsAtEnd)
        {
            return ParseResult<IJyroStatement>.Failure(
                MessageCode.UnexpectedToken,
                tokenStream.Current,
                "Unexpected end of input while expecting statement");
        }

        return tokenStream.Current.Type switch
        {
            JyroTokenType.Var => ParseVariableDeclaration(tokenStream),
            JyroTokenType.If => ParseIfStatement(tokenStream),
            JyroTokenType.Switch => ParseSwitchStatement(tokenStream),
            JyroTokenType.While => ParseWhileStatement(tokenStream),
            JyroTokenType.ForEach => ParseForEachStatement(tokenStream),
            JyroTokenType.Return => ParseReturnStatement(tokenStream),
            JyroTokenType.Break => ParseBreakStatement(tokenStream),
            JyroTokenType.Continue => ParseContinueStatement(tokenStream),
            JyroTokenType.EndOfFile => ParseResult<IJyroStatement>.Failure(
                MessageCode.UnexpectedToken,
                tokenStream.Current,
                "Unexpected end of file while parsing statement"),
            _ => ParseExpressionOrAssignment(tokenStream)
        };
    }

    /// <summary>
    /// Parses variable declaration statements following the grammar:
    /// "var" Identifier [ ":" Type ] [ "=" Expression ]
    /// </summary>
    /// <param name="tokenStream">The token stream to parse from.</param>
    /// <returns>A parse result containing the variable declaration statement or error information.</returns>
    private ParseResult<IJyroStatement> ParseVariableDeclaration(TokenStream tokenStream)
    {
        var varToken = tokenStream.Advance(); // consume "var"

        var nameResult = Require(tokenStream, JyroTokenType.Identifier, "variable name");
        if (nameResult.IsFailure)
        {
            return ParseResult<IJyroStatement>.Failure(nameResult.Error);
        }

        var variableName = nameResult.Value.Lexeme;
        IExpression? typeHint = null;
        IExpression? initializer = null;

        // Optional type annotation: ":" Type
        if (tokenStream.Match(JyroTokenType.Colon))
        {
            var typeResult = ParseTypeExpression(tokenStream);
            if (typeResult.IsFailure)
            {
                return ParseResult<IJyroStatement>.Failure(typeResult.Error);
            }
            typeHint = typeResult.Value;
        }

        // Optional initializer: "=" Expression
        if (tokenStream.Match(JyroTokenType.Equal))
        {
            var initializerResult = ParseExpression(tokenStream);
            if (initializerResult.IsFailure)
            {
                return ParseResult<IJyroStatement>.Failure(initializerResult.Error);
            }
            initializer = initializerResult.Value;
        }

        return ParseResult<IJyroStatement>.Success(
            new VariableDeclarationStatement(variableName, typeHint, initializer, varToken.LineNumber, varToken.ColumnPosition));
    }

    /// <summary>
    /// Parses type expressions for variable declarations and type checking operations.
    /// Handles the fundamental Jyro type keywords: number, string, boolean, object, array.
    /// </summary>
    /// <param name="tokenStream">The token stream to parse from.</param>
    /// <returns>A parse result containing the type expression or error information.</returns>
    private ParseResult<IExpression> ParseTypeExpression(TokenStream tokenStream)
    {
        var typeTokenResult = RequireAny(tokenStream, "type keyword",
            JyroTokenType.NumberType, JyroTokenType.StringType, JyroTokenType.BooleanType,
            JyroTokenType.ObjectType, JyroTokenType.ArrayType);

        if (typeTokenResult.IsFailure)
        {
            return ParseResult<IExpression>.Failure(typeTokenResult.Error);
        }

        var typeToken = typeTokenResult.Value;
        return ParseResult<IExpression>.Success(
            new TypeExpression(typeToken.Type, typeToken.LineNumber, typeToken.ColumnPosition));
    }

    /// <summary>
    /// Parses if statements with support for else-if chains following the grammar:
    /// "if" Expression "then" { Statement } { "else" "if" Expression "then" { Statement } } [ "else" { Statement } ] "end"
    /// </summary>
    /// <param name="tokenStream">The token stream to parse from.</param>
    /// <returns>A parse result containing the if statement or error information.</returns>
    private ParseResult<IJyroStatement> ParseIfStatement(TokenStream tokenStream)
    {
        var ifToken = tokenStream.Advance(); // consume "if"

        var conditionResult = ParseExpression(tokenStream);
        if (conditionResult.IsFailure)
        {
            return ParseResult<IJyroStatement>.Failure(conditionResult.Error);
        }

        var thenTokenResult = Require(tokenStream, JyroTokenType.Then, "then");
        if (thenTokenResult.IsFailure)
        {
            return ParseResult<IJyroStatement>.Failure(thenTokenResult.Error);
        }

        TrackDepth(1); // Track nesting for then branch
        var thenStatementsResult = ParseStatementBlock(tokenStream, JyroTokenType.Else, JyroTokenType.End);
        if (thenStatementsResult.IsFailure)
        {
            return ParseResult<IJyroStatement>.Failure(thenStatementsResult.Error);
        }

        // Handle chained else-if constructs: { "else" "if" Expression "then" { Statement } }
        var elseIfClauses = new List<ElseIfClause>();
        while (tokenStream.Check(JyroTokenType.Else))
        {
            var elseToken = tokenStream.Advance(); // consume "else"

            // Check if this is "else if" or just "else"
            if (tokenStream.Check(JyroTokenType.If))
            {
                tokenStream.Advance(); // consume "if"

                var elseIfConditionResult = ParseExpression(tokenStream);
                if (elseIfConditionResult.IsFailure)
                {
                    return ParseResult<IJyroStatement>.Failure(elseIfConditionResult.Error);
                }

                var elseIfThenResult = Require(tokenStream, JyroTokenType.Then, "then");
                if (elseIfThenResult.IsFailure)
                {
                    return ParseResult<IJyroStatement>.Failure(elseIfThenResult.Error);
                }

                TrackDepth(1); // Track nesting for else-if branch
                var elseIfStatementsResult = ParseStatementBlock(tokenStream, JyroTokenType.Else, JyroTokenType.End);
                if (elseIfStatementsResult.IsFailure)
                {
                    return ParseResult<IJyroStatement>.Failure(elseIfStatementsResult.Error);
                }

                elseIfClauses.Add(new ElseIfClause(
                    elseIfConditionResult.Value,
                    elseIfStatementsResult.Value,
                    elseToken.LineNumber,
                    elseToken.ColumnPosition));
            }
            else
            {
                // This is a final "else" clause
                TrackDepth(1); // Track nesting for else branch
                var elseStatementsResult = ParseStatementBlock(tokenStream, JyroTokenType.End);
                if (elseStatementsResult.IsFailure)
                {
                    return ParseResult<IJyroStatement>.Failure(elseStatementsResult.Error);
                }

                var endTokenResult = Require(tokenStream, JyroTokenType.End, "end");
                if (endTokenResult.IsFailure)
                {
                    return ParseResult<IJyroStatement>.Failure(endTokenResult.Error);
                }

                return ParseResult<IJyroStatement>.Success(
                    new IfStatement(conditionResult.Value, thenStatementsResult.Value, elseIfClauses, elseStatementsResult.Value,
                                   ifToken.LineNumber, ifToken.ColumnPosition));
            }
        }
